--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,15 +6,19 @@
 
     <uses-sdk
         android:minSdkVersion="11"
-        android:targetSdkVersion="18" />
-    
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+        android:targetSdkVersion="19" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity
             android:name="edu.virginia.cs2110.ghost.MainActivity"
             android:label="@string/app_name" >
