--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,6 +25,9 @@
         <meta-data
     		android:name="com.google.android.maps.v2.API_KEY"
     		android:value="AIzaSyD0cPcTNO5t5woXPGiU8tj7EYHTYCmwy3w"/>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version"/>
         <activity
             android:name="edu.virginia.cs2110.ghost.MainActivity"
             android:label="@string/app_name" >
