--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ghost"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
@@ -29,6 +29,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
         <activity
+            android:screenOrientation="portrait"
             android:name="edu.virginia.cs2110.ghost.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
