--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,10 @@
             android:value="@integer/google_play_services_version"/>
         <activity
             android:screenOrientation="portrait"
+            android:name="edu.virginia.cs2110.ghost.SplashScreen"
+            android:label="@string/app_name" ></activity>
+        <activity
+            android:screenOrientation="portrait"
             android:name="edu.virginia.cs2110.ghost.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
