--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,7 +31,12 @@
         <activity
             android:screenOrientation="portrait"
             android:name="edu.virginia.cs2110.ghost.SplashScreen"
-            android:label="@string/app_name" ></activity>
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
         <activity
             android:screenOrientation="portrait"
             android:name="edu.virginia.cs2110.ghost.MainActivity"
