--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,6 +30,7 @@
             android:value="@integer/google_play_services_version"/>
         <activity
             android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black"
             android:name="edu.virginia.cs2110.ghost.SplashScreen"
             android:label="@string/app_name" >
             <intent-filter>
