--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -40,22 +40,28 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name="edu.virginia.cs2110.ghost.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>`
         </activity>
         <activity
             android:name="edu.virginia.cs2110.ghost.CameraActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
         </activity>
+
+        <service
+            android:name="edu.virginia.cs2110.ghost.ReceiveTransitionsIntentService"
+            android:exported="false"
+            android:label="@string/app_name" >
+        </service>
     </application>
 
 </manifest>
