--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -49,12 +49,14 @@
         <activity
             android:name="edu.virginia.cs2110.ghost.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black" >
         </activity>
         <activity
             android:name="edu.virginia.cs2110.ghost.CameraActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black" >
         </activity>
 
         <service
